[package]
name = "distributed_mls"
description = "MLS agent employing the Distributed MLS concept."
categories = ["cryptography"]
keywords = ["mls", "rfc9420", "e2ee"]
version = "0.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/josephlukefahr/distributed_mls"

[dependencies]
mls-rs = "0.48"
mls-rs-crypto-openssl = "0.16"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
md5 = "0.7"
mls-rs-codec = "0.6"
rand_chacha = "0.9"

[lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
missing_docs = "warn"
rust_2021_compatibility = "warn"
unused = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
cargo = "warn"
